--- a/SillyBirdProject/pom.xml
+++ b/SillyBirdProject/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>edu.augustana.sillybirdproject/edu.augustana.sillybirdproject.HelloApplication
+                            <mainClass>edu.augustana.sillybirdproject/edu.augustana.sillybirdproject.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
